--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,6 @@
-Hello World
+<html>
+ <body>
+<H1>Hello world, it's me again</H1>
+  <p><img src="lighthouse.jpg" width="500" height="250" alt="lighthouse"></p>
+ </body>
+</html>
